fix: word wrap for reviews

--- a/client/src/components/MovieSeriesPage/MovieSeriesReviews/ReviewItem/ReviewItem.scss
+++ b/client/src/components/MovieSeriesPage/MovieSeriesReviews/ReviewItem/ReviewItem.scss
@@ -65,6 +65,8 @@
 			position: relative;
 			text-align: justify;
 			line-height: 1.6em;
+			word-wrap: break-word;
+			max-width: 100ch;
 
 			.read-more-gradient {
 				width: 100%;
